# MicroPython_SHT4X

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.rst  examples.json  package.json  pyproject.toml
.github/workflows/: release_pypi.yml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: sht4x_heat_time.py  sht4x_heater_power.py  sht4x_simpletest.py  sht4x_temperature_precision.py
micropython_sht4x/: sht4x.py
